  throughput metrics. ({issues}2302[#2302])

[float]
===== Bug fixes

- Fix Express route tracking (used for `transaction.name`) when an argument
  is passed to the `next(arg)` callback of a request handler. Before this
  change passing `next(<some object not an instance of Error>)` would be
  considered an error by Express, but not by the APM agent's route
  tracking. ({pull}2750[#2750])

[float]
===== Chores


[[release-notes-3.35.0]]
==== 3.35.0 2022/06/01

[float]
===== Features

- Add support for 'knex' version v0.21 to v1 ({issues}2699[#2699])

- Change the instrumentation of SQS- and SNS-triggered AWS Lambda invocations:
  The special-casing of triggers with a *single* message/record has been
  removed.  That means that instead of a possible continued distributed trace
  (if a single received message has a 'traceparent'), a *span link* will be
  added to the APM transaction for each message with a 'traceparent'.
  `transaction.context.message.` fields are no longer collected.
  ({pull}2708[#2708])

- Enable support for ioredis v5 ({pull}2714[#2714])

- A Docker image with the APM agent will be published for each release to
  `docker.elastic.co/observability/apm-agent-nodejs:VERSION`, for example:
  `docker.elastic.co/observability/apm-agent-nodejs:3.35.0`. ({pull}2742[#2742])

[float]
===== Bug fixes

- Fixes automatic Lambda handler wrapping to work with handlers that point to
  subfolders (ex. `_HANDLER=path/to/folder.methodName`) ({issues}2709[#2709])


[[release-notes-3.34.0]]
==== 3.34.0 2022/05/26

[float]
===== Features

- Add support for 'tedious' version v10 to v14 ({issues}2517[#2517])

- When automatically determining <<service-name>> and <<service-version>> by
  looking for a "package.json", the agent will now prefer to start looking
  from the directory of the script being executed, rather than the current
  working directory. ({issues}2420[#2420])

- Add an experimental <<opentelemetry-bridge>>.  Briefly, the OpenTelemetry