@@ -926,7 +926,7 @@ The value should include a time suffix ('m' for minutes, 's' for seconds, or
 ==== `sanitizeFieldNames`
 * *Type:* Array
 * *Default:* `['password', 'passwd', 'pwd', 'secret', '*key', '*token*', '*session*', '*credit*', '*card*', '*auth*', 'set-cookie', 'pw', 'pass', 'connect.sid']`
-* *Env:* `ELASTIC_SANITIZE_FIELD_NAMES`
+* *Env:* `ELASTIC_APM_SANITIZE_FIELD_NAMES`
 * <<dynamic-configuration, image:./images/dynamic-config.svg[] >> *Central config name:* `sanitize_field_names`
 
 Remove sensitive data sent to Elastic APM.
@@ -1155,7 +1155,7 @@ If the value is not one of the five listed above, the agent will use the value o
 ==== `ignoreMessageQueues`
 * *Type:* Array
 * *Default:* `[]`
-* *Env:* `ELASTIC_IGNORE_MESSAGE_QUEUES`
+* *Env:* `ELASTIC_APM_IGNORE_MESSAGE_QUEUES`
 * <<dynamic-configuration, image:./images/dynamic-config.svg[] >> *Central config name:* `ignore_message_queues`
 
 Array or comma-separated string of wildcard patterns that tell the agent to
