@@ -110,7 +110,7 @@ var ENV_TABLE = {
   disableInstrumentations: 'ELASTIC_APM_DISABLE_INSTRUMENTATIONS',
   disableSend: 'ELASTIC_APM_DISABLE_SEND',
   environment: 'ELASTIC_APM_ENVIRONMENT',
-  ignoreMessageQueues: 'ELASTIC_IGNORE_MESSAGE_QUEUES',
+  ignoreMessageQueues: ['ELASTIC_IGNORE_MESSAGE_QUEUES', 'ELASTIC_APM_IGNORE_MESSAGE_QUEUES'],
   errorMessageMaxLength: 'ELASTIC_APM_ERROR_MESSAGE_MAX_LENGTH',
   errorOnAbortedRequests: 'ELASTIC_APM_ERROR_ON_ABORTED_REQUESTS',
   filterHttpHeaders: 'ELASTIC_APM_FILTER_HTTP_HEADERS',
@@ -132,7 +132,7 @@ var ENV_TABLE = {
   metricsLimit: 'ELASTIC_APM_METRICS_LIMIT',
   opentelemetryBridgeEnabled: 'ELASTIC_APM_OPENTELEMETRY_BRIDGE_ENABLED',
   payloadLogFile: 'ELASTIC_APM_PAYLOAD_LOG_FILE',
-  sanitizeFieldNames: 'ELASTIC_SANITIZE_FIELD_NAMES',
+  sanitizeFieldNames: ['ELASTIC_SANITIZE_FIELD_NAMES', 'ELASTIC_APM_SANITIZE_FIELD_NAMES'],
   serverCaCertFile: 'ELASTIC_APM_SERVER_CA_CERT_FILE',
   secretToken: 'ELASTIC_APM_SECRET_TOKEN',
   serverTimeout: 'ELASTIC_APM_SERVER_TIMEOUT',
@@ -545,7 +545,6 @@ function readEnv () {
       }
     }
   }
-
   return opts
 }
 
@@ -1220,5 +1219,6 @@ module.exports = {
   DEFAULTS,
   DURATION_OPTS,
   secondsFromDuration,
-  userAgentFromConf
+  userAgentFromConf,
+  ENV_TABLE
 }
