@@ -53,6 +53,10 @@ Notes:
   considered an error by Express, but not by the APM agent's route
   tracking. ({pull}2750[#2750])
 
+- Updated `sanitizeFieldNames` and `ignoreMessageQueues` environment variables
+  to use `ELASTIC_APM_` prefix. (previous variable names are still recgonized,
+  but not documented) ({issues}2636[#2636])
+
 [float]
 ===== Chores
 
